fixed bug on small mobile devices, fixed animations on services

--- a/src/css/hero.css
+++ b/src/css/hero.css
@@ -16,3 +16,9 @@
     transform: translate(-50%, -50%);
     color: white;
 }
+
+@media only screen and (max-width: 450px) {
+    .hero-image {
+        height: 70%;
+    }
+}
